Fix various IE/Edge layout issues. Resolves #779

--- a/src/app/styles/components/_directions-form.scss
+++ b/src/app/styles/components/_directions-form.scss
@@ -84,6 +84,7 @@
             justify-content: flex-end;
             margin-right: -10px;
             padding-top: 3px;
+            padding-left: 60px;
 
             .mode-label {
                 display: none;
@@ -142,7 +143,7 @@
         }
 
         .body-map & {
-            margin-right: 40px;
+            margin-right: 50px;
 
             @include respond-to('xxs') {
                 margin-right: 70px;
