--- a/src/app/styles/components/_place-card.scss
+++ b/src/app/styles/components/_place-card.scss
@@ -47,7 +47,6 @@
 .place-card-photo {
     display: block;
     width: 100%;
-    height: auto;
 }
 
 .place-card-travel-logistics {
