--- a/src/app/styles/components/_place-list.scss
+++ b/src/app/styles/components/_place-list.scss
@@ -18,14 +18,14 @@
         // Nesting the `sidebar-main` mixin inside a class makes the calculated height stop working,
         // so instead that's the default and we need to set some properties back to default values
         // for the home page view.
-        width: auto;
-        height: auto;
-        overflow: visible;
-
+        flex: 1 0 auto;
+        width: 100%;
         max-width: $home-main-max-width;
+        height: auto;
         margin: 0 auto $home-section-margin;
         padding: 0 $home-section-padding 10px;
         background-color: $home-section-bg-color;
+        overflow: visible;
 
         @include respond-to('xs') {
             max-width: $place-card-width + (2 * $home-section-padding);
